package com.academia.pagos;

public enum EstadoPago {
    PENDIENTE,
    APROBADO,
    RECHAZADO
}
