classDiagram

class Usuario {
    -String idUsuario
    -String nombreUsuario
    -String apellidoUsuario
    -boolean estado
}

class Rol {
    -int idRol
    -String nombreRol
    -String descripcion
}

class Pago {
    -int idPago
    -double monto
    -LocalDate fechaPago
    -String rutaComprobante
    -EstadoPago estadoPago
    -String idAsesorValidador
    +estaPendiente() boolean
    +estaValidado() boolean
}

class Factura {
    -int idFactura
    -String numeroFactura
    -LocalDate fechaEmision
    -double montoTotal
    +generar()
    +obtenerDetalle()
}

class EstadoPago {
    <<enumeration>>
    PENDIENTE
    APROBADO
    RECHAZADO
}

class EstadoCuenta {
    -double saldoPendiente
    -boolean tieneMora
    +calcularSaldo()
    +verificarMora() boolean
}

class IndicadorMora {
    -int cantidadEstudiantesMora
    -double montoTotalPendiente
    +calcular()
    +filtrarPorPeriodo(int idPeriodo)
    +filtrarPorFormacion(String formacion)
}

Rol "1" <-- "0..*" Usuario : tiene

Usuario "1" <-- "0..*" Pago : estudiante

Usuario "0..1" <-- "0..*" Pago : valida

Pago "1" <-- "0..1" Factura : genera

Usuario "1" <-- "0..*" Factura : estudiante

Usuario "1" *-- "1" EstadoCuenta : posee

EstadoCuenta "1" --> "0..*" Pago : considera

IndicadorMora --> EstadoCuenta : analiza

Pago --> EstadoPago